# dicom-standard

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  README.rst  attribute_properties.py  ciod_modules.py  combine_attr_with_vr_vm.py  extend_attribute_properties.py  extend_attributes.py  extract_attributes.py  extract_ciod_module_data.py  extract_ciod_modules.py  extract_ciods_with_modules.py  extract_data_element_registry.py  extract_macros.py  extract_modules_attributes.py  extract_modules_with_attributes.py  extract_references.py  extract_sections.py  generate_sitemaps.py  hierarchy_utilities.py  hierarchy_utils.py  macro_utilities.py  macro_utils.py  modules_attributes.py  normalize_attributes.py  normalize_ciod_module_relationship.py  normalize_ciods.py  normalize_module_attr_relationship.py  normalize_modules.py  parse_extra_sections.py  parse_lib.py  parse_relations.py  parse_standard.py  parser.py  postprocess_add_references.py  postprocess_mark_references.py  postprocess_save_references.py  (+15 more)
.github/: workflows.yml
dicom-standard/: Makefile  extract_ciod_module_data.py  extract_modules_with_attributes.py  extract_sections.py  postprocess_save_references.py  postprocess_update_reference_links.py  process_ciods.py  process_modules.py
dicom_standard/: Makefile  extract_attributes.py  extract_ciod_func_group_macro_tables.py  extract_ciod_functional_group_macro_tables.py  extract_ciod_macro_data.py  extract_ciod_module_data.py  extract_ciod_module_tables.py  extract_ciod_uids.py  extract_conf_profile_attributes.py  extract_macros.py  extract_macros_with_attributes.py  extract_modules_macros_with_attributes.py  extract_modules_with_attributes.py  extract_sections.py  extract_sops.py  extract_uids.py  hierarchy_utils.py  macro_utils.py  parse_lib.py  parse_relations.py  postprocess_integrate_func_group_macros.py  postprocess_mark_references.py  postprocess_merge_duplicate_nodes.py  postprocess_save_references.py  postprocess_update_reference_links.py  preprocess_macros_with_attributes.py  preprocess_modules_with_attributes.py  process_ciod_fg_macro_relationship.py  process_ciod_func_group_macro_relationship.py  process_ciod_macro_relationship.py  process_ciod_module_relationship.py  process_ciods.py  process_macro_attribute_relationship.py  process_macros.py  process_module_attribute_relationship.py  process_modules.py  table_utils.py
(+49 files in other folders)
