[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, flake8, mypy, pytest, build-dist
isolated_build = true

[testenv]
basepython = python3.7

[testenv:flake8]
deps = flake8
commands = flake8

[testenv:mypy]
deps = mypy
commands =
    mypy -p dicom_standard
    mypy -p tests

[testenv:pytest]
deps =
    pytest
    bs4
    requests
commands = pytest tests

[testenv:build-dist]
usedevelop = false
skip_install = true
deps =
    pep517
    twine
commands =
    python -m pep517.check {toxinidir}
    python -m pep517.build \
      --source \
      --binary \
      --out-dir {toxinidir}/dist \
      {toxinidir}
    twine check dist/*
"""
