[metadata]
name = dicom-standard
# Package version is automatically filled by GitHub Actions workflow
version = 0.1.0
description = Parse the DICOM Standard into a human-friendly JSON format.
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/innolitics/dicom-standard
author = Innolitics, LLC
author_email = info@innolitics.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha

    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords =
    dicom
    standard
    json

[options]
python_requires = >= 3.7
packages = find:
install_requires =
    beautifulsoup4

[options.packages.find]
exclude =
    tests

[options.data_files]
standard =
    standard/attributes.json
    standard/ciod_to_func_group_macros.json
    standard/ciod_to_modules.json
    standard/ciods.json
    standard/confidentiality_profile_attributes.json
    standard/macros.json
    standard/macro_to_attributes.json
    standard/modules.json
    standard/module_to_attributes.json
    standard/references.json
    standard/sops.json

[options.extras_require]
dev =
    tox
test =
    pytest
    requests

[flake8]
ignore = E501, W503
exclude = .tox,*.egg,build,data
select = E,W,F
max-line-length = 120

[mypy]
python_version = 3.7
ignore_missing_imports = true
